[tool.poetry]
name = "task-planner"
version = "0.1.0"
description = ""
authors = ["MartinezAgullo <pablo.martinez.agullo@gmail.com>"]
readme = "README.md"
packages = [{include = "task_planner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
pydantic = ">=2.0"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
tree = "^0.2.4"
dependency-injector = "^4.47.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
uvicorn = "^0.34.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["organizer"]
testpaths = ["organizer/tests"]
python_files = ["test_*.py"]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "venv",
    "__pycache__",
    "organizer/task_planner/driven/postgres_repository/boot"
]


[tool.mypy]
mypy_path = "organizer"
